---------------------------------------------------------------------------------------------------
Version: 0.11.5
Date: 2022-12-24
  Localization:
    - ja locale updates from Sakuro
---------------------------------------------------------------------------------------------------
Version: 0.11.4
Date: 2022-08-23
  Changes:
    - deep core mining balance for stone needs
    - Minor compatibility updates
---------------------------------------------------------------------------------------------------
Version: 0.11.3
Date: 2022-08-10
  Changes:
    - Cable item subgroup
---------------------------------------------------------------------------------------------------
Version: 0.11.2
Date: 2022-07-02
  Fixes:
    - SE 0.6.68 compatibility breakage fixed
---------------------------------------------------------------------------------------------------
Version: 0.11.1
Date: 2022-07-01
  Fixes:
    - SE 0.6: Use stone subgroup for raw material items
---------------------------------------------------------------------------------------------------
Version: 0.11.0
Date: 2022-07-01
  Changes:
    - Compatible with Space Exploration 0.6
---------------------------------------------------------------------------------------------------
Version: 0.10.0
Date: 2022-06-26
  Features:
    - Beta support for 248k. Silica used in glass. More changes likely to come.
---------------------------------------------------------------------------------------------------
Version: 0.9.1
Date: 2022-01-08
  Features:
    - Korean (ko) l10n, thanks to x2605
---------------------------------------------------------------------------------------------------
Version: 0.9.0
Date: 2022-01-08
  Features:
    - Added a new optional gyroscope intermediate
---------------------------------------------------------------------------------------------------
Version: 0.8.3
Date: 2022-01-06
  Changes:
    - Polish (pl) l10n, thanks to S3BA