@@ -27,3 +27,4 @@ Thanks to
 - [S3BA](https://github.com/S3BA-pl) (pl)
 - [x2605](https://github.com/x2605) (ko)
 - [Pergamum663](https://github.com/Pergamum663) (ru)
+- [NathanU](https://github.com/NathanU) (de)
