@@ -3,6 +3,7 @@ Version: 0.11.5
 Date: 2022-12-24
   Localization:
     - ja locale updates from Sakuro
+    - de locale updates from NathanU
 ---------------------------------------------------------------------------------------------------
 Version: 0.11.4
 Date: 2022-08-23
